--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2"
+  },
+  "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.19.2"
+    "@types/express-handlebars": "^6.0.0",
+    "@types/node": "^20.12.7"
   }
 }
